"html page right spacing and player top space issues resolved"

--- a/src/main/java/org/ednovo/gooru/client/mvp/play/resource/style/playertablet.css
+++ b/src/main/java/org/ednovo/gooru/client/mvp/play/resource/style/playertablet.css
@@ -186,3 +186,6 @@
 }
 .endPageIframe{
 }
+.metatDataContainer{
+	padding-top:0px;
+}
